git 问题文档增加解决方案

--- a/docs/03.技术/07.答疑解惑文档/01.git.md
+++ b/docs/03.技术/07.答疑解惑文档/01.git.md
@@ -83,3 +83,45 @@ git config --global --unset https.proxy
 ```
 
 2. git 账号没有提交权限，找当前项目的管理员开通权限就可以了。
+
+## error: Failed to connect to github.com prot 443 after 21044 ms: Couldn't connect to server
+
+```javascript
+
+E:\项目\FII_TEST_MICRO_CLOUD_LIT_TEST>git clone https://github.com/Groundhog-Chen/vue-material-admin.git
+error: Failed to connect to github.com prot 443 after 21044 ms: Couldn't connect  to server
+
+```
+使用 git clone 下载 Github 等网站的仓库时，可能会遇到类似 "Recv failure: Connection was reset" 或 "Failed to connect to http://github.com port 443 after 21114 ms: Couldn't connect to server" 的报错。即使打开了全局代理，也会报错。此时，需要为 Git 单独配置代理，可以使用以下命令：
+
+```sh
+git config --global http.proxy http://127.0.0.1:7890
+git config --global https.proxy http://127.0.0.1:7890
+```
+配置完成后，可以使用以下命令查看并修改 Git 的配置：
+
+```sh
+git config --global --edit
+```
+此时 Git 的默认编辑器会打开 ~/.gitconfig 文件，其中包括了代理的配置：
+
+```sh
+
+[http]
+	proxy = http://127.0.0.1:7890
+[https]
+	proxy = http://127.0.0.1:7890
+
+```
+这样就完成了配置，可以 clone 一个仓库来测试，比如：
+
+```sh
+git clone https://github.com/github/gitignore.git
+
+```
+如果仍然报错，可以检查代理端口是否配置正确，并尝试用以下命令设置关闭 SSL 证书验证：
+
+```sh
+git config --global http.sslVerify false
+
+```
